first pass of polishing, before results section.

--- a/icra.bib
+++ b/icra.bib
@@ -523,7 +523,7 @@ year = {2012}
  keywords = {aerodynamics, bird flight, computer animation, forward dynamics, physically based animation},
 }
 
-@article{Tan:2012,
+@article{Tan:2012a,
  author = {Tan, Jie and Turk, Greg and Liu, C. Karen},
  title = {Soft Body Locomotion},
  journal = {ACM Trans. Graph.},
@@ -3053,7 +3053,7 @@ issn = "0027-8424",
   year = 2012
 }
 
-@techreport{Tan:2012,
+@techreport{Tan:2012b,
      title = {Contact Handling for Articulated Rigid Bodies Using LCP},
      author = {Jie Tan and Kristin Siu and C. Karen Liu},
      year = {2012},
