--- a/calibration.tex
+++ b/calibration.tex
@@ -1,19 +1,19 @@
 \section{Simulation Calibration}
 
-Although the optimal controllers $\bar{\mathbf{q}}(t)$ can work effectively in the simulation, they may fail to achieve the tasks when used on the robot due to the Reality Gap. We develop a simulation calibration subsystem, whose goal is to narrow down the Reality Gap and thus significantly increases the chance that the controller optimized in the simulation can be transferred to the real robot. In this subsystem, we formulate an optimization (eq.~(\ref{eqn:calibration})) that searches for the \emph{simulation parameters} $\mathbf{\theta}$ so that the \emph{discrepancy} $E_{cali}$ is minimized between the simulated results and the robot performance in the real environment.
+Although the optimal controllers $\bar{\mathbf{q}}(t)$ can work effectively in the simulation, they may fail to achieve the tasks in the real world. One cause of this failure is the erroneous parameter settings in the physical simulation, such as the mass, the moment of inertia, the COM of each body, and the gains of the actuators. Usually, simulation parameters are set according to the specification of the robot. However, we find that many of these specifications are inaccurate. For example, there is about 40\% of error in the total mass of our robot between the open-source CAD file and our own measurement. Instead of trusting these parameters, we decide to adjust them in simulation calibration. We formulate an optimization that searches for the simulation parameters $\mathbf{\theta}$ to minimize the discrepancy $E_{cali}$ between the simulated results and the robot performance in the real environment.
 
 \begin{equation}
  \min_{\mathbf{\theta}} E_{cali}
 \label{eqn:calibration}
 \end{equation}
 
-Many parameters need to be set before a physical simulation starts, for example, the mass, the moment of inertia, the COM of each body, the coefficient of restitution and friction, and the gains of the actuators. The accuracy of a physical simulation highly relies on the correctness of these parameter settings because changing simulation parameters can drastically alter the simulation results. Usually, simulation parameters can be set according to the specification sheet of the robot. However, we find that many of these parameters are incorrect. For example, from the CAD file, we calculate the total mass of the robot to be less than 1.1kg, but our own measurement using a scale reads 1.5kg. Furthermore, the height of the COM differs more than 1cm between CAD file and our measurement. This difference in parameters could be due to the manufacturing errors and the weight of cables, glues, nuts and bolts that were used in assembling the robot. Instead of trusting these simulation parameters, we decide to adjust them during simulation calibration.
-
-We improve the simulation accuracy by minimizing the discrepancy $E_{cali}$, which is defined as the difference between the state trajectories in the simulation and those collected in the real robot experiment when the same controller is used in both scenarios. Recall that our entire algorithm is an iterative process. At the $n$th iteration, the optimal controller $\bar{\mathbf{q}}_n(t)$ produces the state trajectory $\mathbf{x}_n(t)$ in the simulation and $\tilde{\mathbf{x}}_n(t)$ on the real robot\footnote{we use the average of the multiple trajectories as $\tilde{\mathbf{x}}_n(t)$ in the robot experiment because even with the same controller, we can get slightly different trajectories due to the varied initial conditions, the noise from the sensor, from the actuator and from the environment.}. Together with the $n-1$ pairs of optimal controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n-1}$ and their associated state trajectories $\{\bar{\mathbf{x}}_i(t)\}_{i=1,...,n-1}$ from previous iterations, we compute the discrepancy using the following expression. 
+$E_{cali}$ is defined as the difference between the state trajectories in the simulation and those collected in the real robot experiments when the same controller is used in both scenarios:
 
 \begin{equation}
   E_{cali}=\frac{1}{n}\sum_{i=1}^{n}\int_{0}^{T+1}||\tilde{\mathbf{x}}_i(t)-\mathbf{x}_i(t)||_{\mathbf{W}}^2\mathrm{d}t
   \label{eqn:calibrationObj}
 \end{equation}
-where $\mathbf{W}$ is a diagonal weight matrix, which encapsulates the relative importance of each joint. Due to the complex interplay between the simulation results and the simulation parameters, the optimization (\ref{eqn:calibration}) is nonlinear and nonconvex. Similar to controller optimization, we choose to use CMA as the optimization solver. In this case, each CMA sample is a candidate set of simulation parameters $\mathbf{\theta}$. To evaluate each CMA sample, we set the parameters $\mathbf{\theta}$ into the physical simulator, execute the controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ to simulate the robot motions $\{\mathbf{x}_i(t)\}_{i=1,...,n}$, and then compute the objective function eq. (\ref{eqn:calibrationObj}).
+Recall that our entire algorithm is an iterative process. At the $n$th iteration, the optimal controller $\bar{\mathbf{q}}_n(t)$ produces the state trajectory $\mathbf{x}_n(t)$ in the simulation and $\tilde{\mathbf{x}}_n(t)$ on the real robot\footnote{we use the average of the multiple trajectories as $\tilde{\mathbf{x}}_n(t)$ in the robot experiment because even with the same controller, we can get slightly different trajectories due to the varied initial conditions, the noise from the sensor, from the actuator and from the environment.}. $E_{cali}$ is measured using all $n$ pairs of optimal controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ and their associated state trajectories $\{\bar{\mathbf{x}}_i(t)\}_{i=1,...,n}$ from the current and the previous iterations.  $\mathbf{W}$ is a weight matrix, which encapsulates the relative importance of each joint.
+
+Due to the presence of contact changes in the locomotion task and the complex interplay between the simulation results and the simulation parameters, the optimization (\ref{eqn:calibration}) is challenging using traditional continuous optimization algorithms. Similar to controller optimization, we choose to use CMA as the optimization solver. In this case, each CMA sample is a candidate set of simulation parameters $\mathbf{\theta}$. To evaluate each CMA sample, we set the parameters $\mathbf{\theta}$ into the physical simulator, execute the controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ to simulate the robot motions $\{\mathbf{x}_i(t)\}_{i=1,...,n}$, and then evaluate the objective function eq. (\ref{eqn:calibrationObj}).
 
