a polishing pass on the second half of the paper.

--- a/appendix.tex
+++ b/appendix.tex
@@ -7,7 +7,7 @@
 \label{fig:actuatorMap}
 \end{figure}
 
-In this Appendix, we derive the actuator model (eq.(\ref{eqn:torqueErrorRelationSimple})) from the specifications of the Dynamixel AX-18 servo, which use the following mapping (Figure \ref{fig:actuatorMap}) between the joint angle difference $q-\bar{q}$ and the power level $U$. The intervals A and D determine the slope of the actuator response for counter-clock-wise and clock-wise motions respectively. Smaller values mean steeper response slopes, in which case the actuator follows the desired angle more closely. However, too small values can lead to overshooting problems. B and C are the compliance margins. If the error of angle is within a small margin specified by B and C, the servo does not output any torque. E, the punch, is the minimum power level before the servo shuts down. In practice, we set A and D to be the same so that the servo will behave the same no matter it rotates clock-wise or counter-clock-wise. In addition, since B, C and E are very small compared to A and D, we ignore their effects and approximate the mapping as linear within the intevals $q-\bar{q}\in A\bigcup B\bigcup C\bigcup D$ with the slope $k_e$:
+In this Appendix, we derive the actuator model (eq.(\ref{eqn:torqueErrorRelationSimple})) from the specifications of the Dynamixel AX-18 servo, which use the following mapping (Figure \ref{fig:actuatorMap}) between the joint angle difference $q-\bar{q}$ and the power level $U$. The intervals A and D determine the slope of the actuator response for counter-clockwise and clockwise motions respectively. Smaller values mean steeper response slopes, in which case the actuator follows the desired angle more closely. However, too small a value can lead to overshooting problems. B and C are the compliance margins. If the error of angle is within a small margin specified by B and C, the servo does not output any torque. E, the punch, is the minimum power level before the servo shuts down. In practice, we set A and D to be the same so that the servo will behave the same no matter it rotates clockwise or counter-clockwise. In addition, since B, C and E are very small compared to A and D, we ignore their effects and approximate the mapping as linear within the intervals $q-\bar{q}\in A\bigcup B\bigcup C\bigcup D$ with the slope $k_e$:
 \begin{displaymath}
   U=k_e(q-\bar{q})
 \end{displaymath}
