--- a/conclusion.tex
+++ b/conclusion.tex
@@ -20,11 +20,11 @@
  \end{table}
 
 
-One important component of our system is simulation calibration. It helps us cross the Reality Gap. The results show that our simulation calibration algorithm is effective to narrow down this gap, with minimal number of the robot experiments. In all the experiments, at most two iteration of calibration (or approximately 12 seconds of robot data) is needed before we can transfer the controller to the real robot. This amount of robot data is far less than those needed in typical system identification methods.
+One important component of our system is simulation calibration. The results show that our simulation calibration algorithm is effective to narrow down the Reality Gap, with a minimal number of the robot experiments. In all the experiments, at most two iteration of calibration (or approximately 12 seconds of robot data) is needed before we can transfer the controller to the real robot. This amount of robot data is far less than those needed in typical system identification methods.
 
-Similar to other system identification methods, the parameters optimized in simulation calibration may not be the true physical parameters. For example, we observe that the simulation parameters optimized for the task of lean-to-stand can be different from those of kneel-to-stand. In other words, the calibrated simulator is overfitted to the current task and may not be useful for a different task. Overfitting could be a problem if the goal is to estimate the true physical parameters. However, it is not a problem in our case because the goal is to find a controller for a specific task. Actually, it is beneficial because tightly coupling simulation calibration with the control task makes it possible to use very small number of robot data.
+Similar to other system identification methods, the parameters optimized in simulation calibration may not be the true physical parameters. For example, we observe that the simulation parameters optimized for the task of lean-to-stand can be different from those of kneel-to-stand. In other words, the calibrated simulator is overfitted to the current task and may not be useful for a different task. Overfitting could be a problem if the goal is to estimate the true physical parameters. However, it is not a problem in our case because the goal is to find a controller for a specific task. Actually, it is preferred because tightly coupling simulation calibration with a specific control task makes it possible to use small amount of robot data.
 
-Can we calibrate a simulation so that it can be generalized to other task? To answer this question, we perform the following experiments. In the first experiment, we calibrate the simulation for one task (e.g. lean-to-stand). We perform controller optimization for a different task (e.g. sit-to-stand) in this calibrated simulator and then test this controller on the robot. The first three rows of Table \ref{table:generalize} summarize the generalizability of the calibrated simulation when it is calibrated for a single task. Task I is lean-to-stand. Task II is sit-to-stand and Task III is kneel-to-stand. In most cases, the calibrated simulator cannot be generalized to a different task. In the second experiment, we calibrate the simulation with multiple tasks (e.g. lean-to-stand and sit-to-stand), optimize the controller for a different task (e.g. kneel-to-stand) in this calibrated simulation and test the controller on the robot. The last four rows of Table \ref{table:generalize} summarize the generalizability of the calibrated simulation when it is calibrated for multiple tasks. It clear that its generalizability is greatly improved if multiple tasks are used to calibrate the simulation. These experiments show that if we need to design multiple controllers for different tasks, we may not need to perform simulation calibration for each of the task. It is likely that after developing the first few controllers using our system, the calibrated simulation would be accurate enough that further calibration is not necessary.
+One related question is how we can calibrate a simulation so that it can be generalized to other tasks. To answer this question, we perform the following two experiments. In the first experiment, we calibrate the simulation for one task (e.g. lean-to-stand) and use it to optimize a controller for a different task (e.g. sit-to-stand). We then test this controller on the robot. The first three rows of Table \ref{table:generalize} summarize the generalizability of the calibrated simulation when it is calibrated with a single task. Task I is lean-to-stand. Task II is sit-to-stand and Task III is kneel-to-stand. As we expected, the calibrated simulator cannot be generalized to a different task in most cases. The second experiment is similar to the first except that we calibrate the simulation with multiple tasks (e.g. lean-to-stand and sit-to-stand). The last four rows of Table \ref{table:generalize} summarize the generalizability of the calibrated simulation when it is calibrated with multiple tasks. It is clear that its generalizability is greatly improved if multiple tasks are used to calibrate the simulation. These experiments show that if we need to design multiple controllers for different tasks, we may not need to perform simulation calibration for each of the task. It is likely that after developing the first few controllers using our system, the calibrated simulation would be accurate enough. The remaining controllers can be optimized in the simulation and further calibration is not necessary.
 
 \section{Conclusion}
 
