--- a/intro.tex
+++ b/intro.tex
@@ -5,6 +5,6 @@ We present a system that can automatically design controllers for humanoid robot
 
 To tackle these challenges, we develop a simulation-driven approach that consists of three main components, physical simulation, controller optimization and simulation calibration. We first build a \emph{physical simulation} to simulate the dynamics of the robot and its interaction with the environments. We use \emph{controller optimization} to search for the optimal joint trajectories to fulfil the task in the simulation. However, even though this optimal controller works effectively in the simulation, it can perform poorly on a robot in the real environment. This ``Reality Gap'' \cite{Jakobi95} is caused by various simplifications in simulation algorithms, such as simplified actuator models, inaccurate physical parameters, and ignored hardware limitations, noise and latency. 
 
-We use \emph{simulation calibration} to cross the Reality Gap. Simulation calibration is a dynamic system identification method. During calibration, we collect the real performance data on the robot, and use it to improve our physical model. Unlike traditional system identification, which is a separate step from controller design, our simulation calibration is tightly coupled with the controller optimization. We directly peform the optimal controller that is found in the simulation to collect real data for system identification. In this way, the simulation is calibrated at the vicinity of the current optimal controller. The computation is focused at the important regions of the control space and thus fewer robot experiments are needed. Through calibration, the simulator can capture the real world dynamics more faithfully. This calibrated simulator is used again in controller optimization to improve the quality of the controller. We evaluate our system using four locomotion tasks: lean-to-stand, sit-to-stand, kneel-to-stand and stand-to-handstand. Although these tasks are distinctively different, our system can find successful controllers for all the tasks efficiently and automatically. 
+We use \emph{simulation calibration} to cross the Reality Gap. Simulation calibration is a dynamic system identification method. During calibration, we collect real performance data on the robot, and use it to improve our physical model. Unlike traditional system identification, which is a separate step from controller design, our simulation calibration is tightly coupled with the controller optimization. We directly perform the optimal controller that is found in the simulation to collect real data for system identification. In this way, the simulation is calibrated at the vicinity of the current optimal controller. The computation is focused at the important regions of the control space and thus fewer robot experiments are needed. Through calibration, the simulator can capture the real world dynamics more faithfully. This calibrated simulator is used again in controller optimization to improve the quality of the controller. We evaluate our system using four locomotion tasks: lean-to-stand, sit-to-stand, kneel-to-stand and stand-to-handstand. Although these tasks are distinctively different, our system can find successful controllers for all the tasks efficiently and automatically. 
 
 The main contribution of this paper is a complete pipeline that can automatically design robot controllers for a wide range of locomotion tasks. This simulation-driven approach can effectively cut the time and the cost of designing robot controllers. It replaces the tedious manual tuning with automatic optimization processes, and drastically reduces the number of expensive robot experiments. Starting from task specifications, our system can find controllers that operate on the robot, with minimal human intervention. 
