add the result images of handStand.

--- a/icra.tex
+++ b/icra.tex
@@ -28,7 +28,7 @@ Simulation-Driven Robot Controller Design
 }
 
 
-\author{Jie Tan$^{1}$ ~~~Zhaoming Xie$^{1}$ ~~~Byron Boots$^{2}$ ~~~Greg Turk$^{2}$ ~~~Karen Liu$^{2}$% <-this % stops a space
+\author{Jie Tan$^{1}$ ~~~Zhaoming Xie$^{1}$ ~~~Byron Boots$^{2}$ ~~~Karen Liu$^{2}$% <-this % stops a space
 \thanks{$^{1}$The authors are with College of Computing, Georgia Institute of Technology, Atlanta, GA, USA. Email:
         {\tt\small \{jtan34, zxie47\}@gatech.edu}}%
 \thanks{$^{2}$The authors are with College of Computing, Georgia Institute of Technology, Atlanta, GA, USA. Email:
