comments from section 1-6

--- a/icra.tex
+++ b/icra.tex
@@ -11,6 +11,8 @@
 
 \overrideIEEEmargins                                      % Needed to meet printer requirements.
 
+\input{defs}
+
 % See the \addtolength command later in the file to balance the column lengths
 % on the last page of the document
 
