fix two reference error. Fill in the table of generalization.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -7,13 +7,13 @@
 \hline
  Tasks &  I &  II  &  III \\
  \hline
- I & Succeed & &  \\
+ I & Succeed & Fail & Fail  \\
  II & Fail & Succeed & Fail \\
- III & & & Succeed \\
- I\&II & & & \\
- I\&III & & & \\
- II\&III & & & \\
- I\&II\&III & & &\\
+ III & Succeed & Fail & Succeed \\
+ I\&II & Succeed & Succeed & Succeed\\
+ I\&III & Succeed & Fail & Succeed\\
+ II\&III & Succeed & Succeed & Succeed \\
+ I\&II\&III & Succeed & Succeed & Succeed\\
 \hline
 \end{tabular}
 \end{center}
