--- a/optimization.tex
+++ b/optimization.tex
@@ -1,7 +1,7 @@
 \section{Controller Optimization}
 \karen{If the goal is to create robust controllers, can we later use the calibrated simulation parameters to create a feedback controller (\eg using inverted pendulum model) via simulator?}
 
-Given the physical simulation, we can design controllers to enable the robot to achieve various locomotion tasks in the simulated environment. The four tasks that we use to test our system are rising from a sitting, leaning or kneeling position and flipping towards a handstand position (Figure \ref{fig:sit2Stand}, \ref{fig:lean2Stand}, \ref{fig:kneel2Stand} and \ref{fig:stand2Handstand}). For each task, the joint configuration of the initial pose and the final pose are provided by the user. The goal of controller optimization is to find a sequence of control signals $\bar{q}(t)$ so that the robot can move from the initial to the final pose without losing balance. We purposefully choose to use only open-loop controllers\footnote{Note that there is still an internal feedback loop in the actuators to track the desired joint angle. However, this feedback loop is not fully programmable and we do not alter this feedback loop in our controller design.} in this work, which means that the control signal $\bar{\mathbf{q}}(t)$ is a only function of time $t$ and does not depend on the states of the robot. Using only the open-loop controller is important to evaluate our system. It puts simulation calibration into a more thorough test because the accuracy of the simulation becomes more critical if feedback control is not allowed.
+Given the physical simulation, we can design controllers to enable the robot to achieve various locomotion tasks in the simulated environment. The four tasks that we use to test our system are rising from a sitting, leaning or kneeling position and flipping towards a handstand position (Figure \ref{fig:sit2Stand}, \ref{fig:lean2Stand}, \ref{fig:kneel2Stand} and \ref{fig:stand2Hand}). For each task, the joint configuration of the initial pose and the final pose are provided by the user. The goal of controller optimization is to find a sequence of control signals $\bar{q}(t)$ so that the robot can move from the initial to the final pose without losing balance. We purposefully choose to use only open-loop controllers\footnote{Note that there is still an internal feedback loop in the actuators to track the desired joint angle. However, this feedback loop is not fully programmable and we do not alter this feedback loop in our controller design.} in this work, which means that the control signal $\bar{\mathbf{q}}(t)$ is a only function of time $t$ and does not depend on the states of the robot. Using only the open-loop controller is important to evaluate our system. It puts simulation calibration into a more thorough test because the accuracy of the simulation becomes more critical if feedback control is not allowed.
 
 We first formulate a trajectory optimization problem for each task.
 \begin{align}
@@ -13,7 +13,7 @@ We first formulate a trajectory optimization problem for each task.
 \end{align}
 
 \karen{At this point, it is not clear how we get \vc{q} and \vc{f} in the optimization.}
-This optimization searches for the duration $T$ of the entire motion and the trajectory of the desired joint configuration $\bar{\mathbf{q}}(t)$ to maximize a task-related fitness function $V_{ctrl}$, and subject to physical constraints (eq.(\ref{eqn:dyn1})) and boundary conditions (eq.(\ref{eqn:boundary1}) and (\ref{eqn:boundary2})). $\mathbf{x}_0$ is the initial condition, and $\mathbf{q}_T$ is the final pose (Figure \ref{fig:task}). Note that although we can specify the full state in the initial condition, we can only specify the desired joint angles for the final pose because the global translation and rotation are determined by the physical simulation.
+This optimization searches for the duration $T$ of the entire motion and the trajectory of the desired joint configuration $\bar{\mathbf{q}}(t)$ to maximize a task-related fitness function $V_{ctrl}$, and subject to physical constraints (eq.(\ref{eqn:dyn1})) and boundary conditions (eq.(\ref{eqn:boundary1}) and (\ref{eqn:boundary2})). $\mathbf{x}_0$ is the initial condition, and $\mathbf{q}_T$ is the final pose. Note that although we can specify the full state in the initial condition, we can only specify the desired joint angles for the final pose because the global translation and rotation are determined by the physical simulation.
 
 We parameterize the desired trajectory $\bar{\mathbf{q}}(t)$ to reduce the dimension of the optimization problem. Although there are many ways that we can parameterize the control space, designing the most effective control parametrization is not the focus of this work. In this work, we choose a simple parametrization that use a sparse set of keyframes $\bar{\mathbf{q}}_1, \bar{\mathbf{q}}_2, ..., \bar{\mathbf{q}}_n$. In between the keyframes, we linearly interpolate the poses from two adjacent keyframes. With this simplification, the \emph{control parameters} that we need to optimize reduce to only a few keyframes and the time intervals between adjacent keyframes. 
 
